[gd_scene load_steps=35 format=2]

[ext_resource path="res://sprites/leafpiletile2.png" type="Texture" id=1]
[ext_resource path="res://Levels/2.0 - Forest/OutsideLab_02.gd" type="Script" id=2]
[ext_resource path="res://Levels/21.0 Train/parallax_clouds.gd" type="Script" id=3]
[ext_resource path="res://sprites/L0_train/sunflower_road/cloud_tile_big-min.png" type="Texture" id=4]
[ext_resource path="res://sprites/L3_forest/tall_creepy_tree_edge.png" type="Texture" id=5]
[ext_resource path="res://sprites/L3_forest/bigpine.png" type="Texture" id=6]
[ext_resource path="res://sprites/trees/talltree1.png" type="Texture" id=7]
[ext_resource path="res://sprites/L3_forest/lab_exterior_right_upper_tree-min.png" type="Texture" id=8]
[ext_resource path="res://sprites/trees/talltree2.png" type="Texture" id=9]
[ext_resource path="res://Levels/2.0 - Forest/LEAFPILE.tscn" type="PackedScene" id=10]
[ext_resource path="res://Levels/2.0 - Forest/shadowed_pines.tscn" type="PackedScene" id=11]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=12]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=13]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=14]
[ext_resource path="res://world/Sign.tscn" type="PackedScene" id=15]
[ext_resource path="res://sprites/L3_forest/tall_creepy_tree_inside.png" type="Texture" id=16]
[ext_resource path="res://Characters/RobotFollower.tscn" type="PackedScene" id=17]
[ext_resource path="res://sprites/L3_forest/vignette_fade.png" type="Texture" id=18]
[ext_resource path="res://hitnhurtboxes/PlayerDetectionZone.tscn" type="PackedScene" id=19]
[ext_resource path="res://sprites/leafpile/leaf0.png" type="Texture" id=20]
[ext_resource path="res://Characters/nature/nature_sunrock.tscn" type="PackedScene" id=21]
[ext_resource path="res://Characters/nature/nature_squirrel.tscn" type="PackedScene" id=22]
[ext_resource path="res://Characters/nature/nature_squirrel_computer.tscn" type="PackedScene" id=23]
[ext_resource path="res://sprites/L3_forest/inhabitants/nature/mushroom_5-min.png" type="Texture" id=24]
[ext_resource path="res://sprites/L3_forest/inhabitants/nature/nature_fairy_0-min.png" type="Texture" id=25]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=26]
[ext_resource path="res://sprites/L3_forest/inhabitants/nature/mushroom_3-min.png" type="Texture" id=27]
[ext_resource path="res://sprites/L3_forest/inhabitants/nature/mushroom_0-min.png" type="Texture" id=28]
[ext_resource path="res://sprites/L3_forest/inhabitants/nature/mushroom_1-min.png" type="Texture" id=29]
[ext_resource path="res://sprites/L3_forest/inhabitants/nature/nature_fairy_1-min.png" type="Texture" id=30]
[ext_resource path="res://sprites/L3_forest/inhabitants/nature/mushroom_4-min.png" type="Texture" id=31]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 61.4875, 336.522 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 83.7338, 520.403 )

[node name="OutsideLab02" type="Node2D"]
script = ExtResource( 2 )

[node name="PuppyCamera" parent="." instance=ExtResource( 13 )]
position = Vector2( -1592.55, 1314.22 )

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -1180.46, 527.644 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 7992.38, 2057.93 )

[node name="BGStuff" type="Node2D" parent="."]
position = Vector2( -38.8142, -60.4982 )

[node name="leaf_floor" type="TextureRect" parent="BGStuff"]
modulate = Color( 0.588235, 0.584314, 0.576471, 1 )
margin_left = -2780.81
margin_top = 1133.74
margin_right = 8031.19
margin_bottom = 3092.74
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leave_shore" type="Node2D" parent="BGStuff"]
modulate = Color( 0.54902, 0.494118, 0.498039, 1 )
position = Vector2( 1.97534, 860.719 )

[node name="leaf0" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 1379.16, 295.721 )
texture = ExtResource( 20 )

[node name="leaf5" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 1284.37, 295.721 )
scale = Vector2( 1.00841, 1 )
texture = ExtResource( 20 )

[node name="leaf32" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 1159.92, 305.812 )
scale = Vector2( 1.00841, 1 )
texture = ExtResource( 20 )

[node name="leaf33" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 1159.92, 305.812 )
scale = Vector2( 1.00841, 1 )
texture = ExtResource( 20 )

[node name="leaf34" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 1048.92, 305.812 )
scale = Vector2( 1.00841, 1 )
texture = ExtResource( 20 )

[node name="leaf9" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 1468.35, 320.694 )
texture = ExtResource( 20 )

[node name="leaf10" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 1549.22, 306.424 )
texture = ExtResource( 20 )

[node name="leaf24" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 1748.42, 300.045 )
texture = ExtResource( 20 )

[node name="leaf25" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 1857.22, 304.045 )
texture = ExtResource( 20 )

[node name="leaf27" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 2250.27, 289.87 )
texture = ExtResource( 20 )

[node name="leaf28" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 2328.15, 309.992 )
texture = ExtResource( 20 )

[node name="leaf29" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 2516.04, 311.181 )
texture = ExtResource( 20 )

[node name="leaf30" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 2420.9, 298.099 )
texture = ExtResource( 20 )

[node name="leaf31" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 2420.9, 298.099 )
texture = ExtResource( 20 )

[node name="leaf1" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 1980.99, 297.974 )
texture = ExtResource( 20 )

[node name="leaf2" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 2085.26, 297.974 )
texture = ExtResource( 20 )

[node name="leaf16" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 2340.86, 316.653 )
texture = ExtResource( 20 )

[node name="leaf23" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 2480.62, 305.472 )
texture = ExtResource( 20 )

[node name="leaf17" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 2606.29, 312.037 )
texture = ExtResource( 20 )

[node name="leaf18" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 2472.42, 418.208 )
texture = ExtResource( 20 )

[node name="leaf19" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 2666.29, 282.032 )
texture = ExtResource( 20 )

[node name="leaf20" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 2885.56, 272.8 )
texture = ExtResource( 20 )

[node name="leaf52" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 2769.52, 282.05 )
texture = ExtResource( 20 )

[node name="leaf53" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 2974.69, 282.891 )
texture = ExtResource( 20 )

[node name="leaf54" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 3067.19, 284.573 )
texture = ExtResource( 20 )

[node name="leaf55" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 3171.46, 290.459 )
texture = ExtResource( 20 )

[node name="leaf56" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 3263.12, 303.072 )
texture = ExtResource( 20 )

[node name="leaf57" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 3348.05, 292.982 )
texture = ExtResource( 20 )

[node name="leaf58" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 3432.98, 297.186 )
texture = ExtResource( 20 )

[node name="leaf59" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 3510.35, 296.345 )
texture = ExtResource( 20 )

[node name="leaf60" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 3617.14, 300.549 )
texture = ExtResource( 20 )

[node name="leaf61" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 3710.48, 298.868 )
texture = ExtResource( 20 )

[node name="leaf62" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 3803.82, 298.868 )
texture = ExtResource( 20 )

[node name="leaf63" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 3873.61, 298.868 )
texture = ExtResource( 20 )

[node name="leaf64" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 4067.02, 298.027 )
texture = ExtResource( 20 )

[node name="leaf66" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 4176.34, 309.799 )
texture = ExtResource( 20 )

[node name="leaf67" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 4275.56, 307.277 )
texture = ExtResource( 20 )

[node name="leaf68" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 4389.08, 304.754 )
texture = ExtResource( 20 )

[node name="leaf69" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 4514.38, 309.799 )
texture = ExtResource( 20 )

[node name="leaf70" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 4634.63, 306.436 )
texture = ExtResource( 20 )

[node name="leaf71" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 4757.4, 305.595 )
texture = ExtResource( 20 )

[node name="leaf72" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 4862.51, 316.527 )
texture = ExtResource( 20 )

[node name="leaf73" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 4968.46, 313.163 )
texture = ExtResource( 20 )

[node name="leaf74" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 5088.71, 314.845 )
texture = ExtResource( 20 )

[node name="leaf75" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 5197.19, 314.845 )
texture = ExtResource( 20 )

[node name="leaf76" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 5280.43, 314.004 )
texture = ExtResource( 20 )

[node name="leaf77" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 5393.96, 313.163 )
texture = ExtResource( 20 )

[node name="leaf78" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 5502.43, 313.163 )
texture = ExtResource( 20 )

[node name="leaf79" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 5596.61, 299.853 )
texture = ExtResource( 20 )

[node name="leaf65" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 3972, 301.39 )
texture = ExtResource( 20 )

[node name="leaf21" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 1642.98, 293.983 )
texture = ExtResource( 20 )

[node name="leaf26" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 981.674, 359.998 )
texture = ExtResource( 20 )

[node name="leaf35" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 960.651, 291.886 )
texture = ExtResource( 20 )

[node name="leaf36" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 863.948, 291.886 )
texture = ExtResource( 20 )

[node name="leaf37" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 760.518, 290.204 )
texture = ExtResource( 20 )

[node name="leaf38" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 660.451, 284.318 )
texture = ExtResource( 20 )

[node name="leaf39" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 915.243, 283.477 )
texture = ExtResource( 20 )

[node name="leaf44" type="Sprite" parent="BGStuff/leave_shore"]
position = Vector2( 2167.34, 307.863 )
texture = ExtResource( 20 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="BGStuff"]
layer = -1

[node name="clouds" type="ParallaxLayer" parent="BGStuff/ParallaxBackground"]
modulate = Color( 0.984314, 0.909804, 0.756863, 1 )
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 1920, 0 )
script = ExtResource( 3 )
CLOUD_SPEED = 10.0

[node name="TextureRect" type="TextureRect" parent="BGStuff/ParallaxBackground/clouds"]
margin_left = -2203.0
margin_top = 435.527
margin_right = 4247.0
margin_bottom = 1269.53
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="flowers4" type="ParallaxLayer" parent="BGStuff/ParallaxBackground"]
position = Vector2( 116.208, 57.4975 )
motion_scale = Vector2( 0.2, 0.95 )

[node name="shadowed_pines" parent="BGStuff/ParallaxBackground/flowers4" instance=ExtResource( 11 )]
modulate = Color( 1, 1, 1, 1 )
margin_left = -780.747
margin_top = 713.591
margin_right = 8567.25
margin_bottom = 1262.59
rect_scale = Vector2( 0.40485, 0.40485 )

[node name="shadowed_pines2" parent="BGStuff/ParallaxBackground/flowers4" instance=ExtResource( 11 )]
modulate = Color( 0.87451, 0.87451, 0.854902, 1 )
margin_left = -828.315
margin_top = 740.943
margin_right = 8519.68
margin_bottom = 1289.94
rect_scale = Vector2( 0.40485, 0.40485 )

[node name="shadowed_pines3" parent="BGStuff/ParallaxBackground/flowers4" instance=ExtResource( 11 )]
modulate = Color( 0.611765, 0.607843, 0.611765, 1 )
margin_left = -781.936
margin_top = 763.537
margin_right = 8566.06
margin_bottom = 1312.54
rect_scale = Vector2( 0.40485, 0.40485 )

[node name="shadowed_pines4" parent="BGStuff/ParallaxBackground/flowers4" instance=ExtResource( 11 )]
modulate = Color( 0.529412, 0.533333, 0.533333, 1 )
margin_left = -782.777
margin_top = 761.856
margin_right = 8565.22
margin_bottom = 1310.86
rect_scale = Vector2( 0.40485, 0.40485 )

[node name="shadowed_pines5" parent="BGStuff/ParallaxBackground/flowers4" instance=ExtResource( 11 )]
modulate = Color( 0.529412, 0.533333, 0.533333, 1 )
margin_left = -739.051
margin_top = 810.628
margin_right = 8608.95
margin_bottom = 1359.63
rect_scale = Vector2( 0.40485, 0.40485 )

[node name="shadowed_pines6" parent="BGStuff/ParallaxBackground/flowers4" instance=ExtResource( 11 )]
modulate = Color( 0.529412, 0.533333, 0.533333, 1 )
margin_left = -788.663
margin_top = 855.195
margin_right = 8559.34
margin_bottom = 1404.19
rect_scale = Vector2( 0.40485, 0.40485 )

[node name="flowers2" type="ParallaxLayer" parent="BGStuff/ParallaxBackground"]
position = Vector2( -4, 8 )
motion_scale = Vector2( 0.3, 0.99 )

[node name="tall_creepy_tree_inside" type="Sprite" parent="BGStuff/ParallaxBackground/flowers2"]
position = Vector2( 160.081, 617.586 )
texture = ExtResource( 16 )

[node name="tall_creepy_tree_edge" type="Sprite" parent="BGStuff/ParallaxBackground/flowers2"]
position = Vector2( 717.595, 576.382 )
texture = ExtResource( 5 )

[node name="bigpine" type="Sprite" parent="BGStuff/ParallaxBackground/flowers2"]
position = Vector2( 979.931, 812.393 )
texture = ExtResource( 6 )

[node name="talltree2" type="Sprite" parent="BGStuff/ParallaxBackground/flowers2"]
position = Vector2( 411.509, 685.699 )
texture = ExtResource( 9 )

[node name="talltree1" type="Sprite" parent="BGStuff/ParallaxBackground/flowers2"]
position = Vector2( 1171.68, 687.381 )
texture = ExtResource( 7 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 12 )]
position = Vector2( 535.186, 1248.62 )
camera = NodePath("../../PuppyCamera")

[node name="Sign" parent="YSort" instance=ExtResource( 15 )]
position = Vector2( 1708.61, 1395.85 )
text = "Caution: Leaves"

[node name="LEAFPILE" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( 1884.21, 1187.17 )

[node name="RobotFollower" parent="YSort" instance=ExtResource( 17 )]
position = Vector2( 390.93, 1245.76 )
player_path = NodePath("../player")
MAX_SPEED = 500

[node name="nature_sunrock" parent="YSort" instance=ExtResource( 21 )]
position = Vector2( 1306.46, 1241.47 )

[node name="nature_squirrel" parent="YSort/nature_sunrock" instance=ExtResource( 22 )]
position = Vector2( 96.504, -94.4231 )

[node name="nature_squirrel_computer" parent="YSort/nature_sunrock" instance=ExtResource( 23 )]
position = Vector2( -30.7411, -77.7743 )

[node name="fairy_vignette" type="Node2D" parent="YSort"]
position = Vector2( 2579.42, 1336.29 )

[node name="shrooms" type="YSort" parent="YSort/fairy_vignette"]

[node name="mushroom_0-min" type="Sprite" parent="YSort/fairy_vignette/shrooms"]
position = Vector2( -33.4458, 16.418 )
texture = ExtResource( 28 )

[node name="mushroom_1-min" type="Sprite" parent="YSort/fairy_vignette/shrooms"]
position = Vector2( 0.789307, 23.714 )
texture = ExtResource( 29 )

[node name="mushroom_0-min2" type="Sprite" parent="YSort/fairy_vignette/shrooms"]
position = Vector2( 41.759, 23.714 )
texture = ExtResource( 28 )

[node name="mushroom_1-min2" type="Sprite" parent="YSort/fairy_vignette/shrooms"]
position = Vector2( -89.0078, -19.5007 )
texture = ExtResource( 29 )

[node name="mushroom_3-min" type="Sprite" parent="YSort/fairy_vignette/shrooms"]
position = Vector2( -63.1912, -11.0823 )
texture = ExtResource( 27 )

[node name="mushroom_5-min" type="Sprite" parent="YSort/fairy_vignette/shrooms"]
position = Vector2( 91.1475, -26.2356 )
texture = ExtResource( 24 )

[node name="mushroom_4-min" type="Sprite" parent="YSort/fairy_vignette/shrooms"]
position = Vector2( -18.8538, -112.104 )
texture = ExtResource( 31 )

[node name="mushroom_3-min2" type="Sprite" parent="YSort/fairy_vignette/shrooms"]
position = Vector2( -48.5991, -91.8995 )
texture = ExtResource( 27 )

[node name="mushroom_1-min3" type="Sprite" parent="YSort/fairy_vignette/shrooms"]
position = Vector2( -87.324, -68.3279 )
texture = ExtResource( 29 )

[node name="mushroom_0-min3" type="Sprite" parent="YSort/fairy_vignette/shrooms"]
position = Vector2( 35.0242, -84.6035 )
texture = ExtResource( 28 )

[node name="mushroom_1-min4" type="Sprite" parent="YSort/fairy_vignette/shrooms"]
position = Vector2( 62.5247, -62.1543 )
texture = ExtResource( 29 )

[node name="mushroom_3-min3" type="Sprite" parent="YSort/fairy_vignette/shrooms"]
position = Vector2( 75.4329, -7.15369 )
texture = ExtResource( 27 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="YSort/fairy_vignette"]
position = Vector2( 20.7656, -154.339 )
frames = SubResource( 3 )
playing = true

[node name="FGStuff" type="Node2D" parent="."]
position = Vector2( 646.578, 972.934 )

[node name="CreepyTreeGroup" type="Node2D" parent="FGStuff"]
position = Vector2( 307.269, 230.901 )

[node name="Trees4" type="TextureRect" parent="FGStuff/CreepyTreeGroup"]
visible = false
modulate = Color( 0.588235, 0.564706, 0.592157, 1 )
margin_left = 1833.0
margin_top = -802.0
margin_right = 6744.0
margin_bottom = 320.0
texture = ExtResource( 16 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trees5" type="TextureRect" parent="FGStuff/CreepyTreeGroup"]
modulate = Color( 0.996078, 0.976471, 0.721569, 1 )
margin_left = 1892.92
margin_top = -755.486
margin_right = 6633.92
margin_bottom = 366.514
texture = ExtResource( 16 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreepyTreeGroup2" type="Node2D" parent="FGStuff"]
position = Vector2( -6282.26, 294.663 )

[node name="Trees4" type="TextureRect" parent="FGStuff/CreepyTreeGroup2"]
modulate = Color( 0.588235, 0.564706, 0.592157, 1 )
margin_left = 1833.0
margin_top = -802.0
margin_right = 6744.0
margin_bottom = 320.0
texture = ExtResource( 16 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trees5" type="TextureRect" parent="FGStuff/CreepyTreeGroup2"]
modulate = Color( 0.996078, 0.905882, 0.772549, 1 )
margin_left = 1894.36
margin_top = -756.924
margin_right = 6635.36
margin_bottom = 365.076
texture = ExtResource( 16 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lab_exterior_right_upper_tree-min" type="Sprite" parent="FGStuff"]
visible = false
modulate = Color( 0.529412, 0.435294, 0.384314, 1 )
position = Vector2( 798.062, -121.755 )
texture = ExtResource( 8 )

[node name="pines7" parent="FGStuff" instance=ExtResource( 11 )]
margin_left = 2183.0
margin_top = 120.0
margin_right = 6932.0
margin_bottom = 669.0

[node name="pines2" parent="FGStuff" instance=ExtResource( 11 )]
margin_left = -1484.45
margin_top = 429.449
margin_right = 6944.55
margin_bottom = 978.449

[node name="pines3" parent="FGStuff" instance=ExtResource( 11 )]
margin_left = -933.0
margin_top = 400.0
margin_right = 6843.0
margin_bottom = 949.0

[node name="pines4" parent="FGStuff" instance=ExtResource( 11 )]
margin_left = -1280.0
margin_top = 536.0
margin_right = 6341.0
margin_bottom = 1085.0

[node name="pines5" parent="FGStuff" instance=ExtResource( 11 )]
modulate = Color( 0.239216, 0.360784, 0.423529, 1 )
margin_left = -928.0
margin_top = 638.0
margin_right = 6753.0
margin_bottom = 1187.0

[node name="pines6" parent="FGStuff" instance=ExtResource( 11 )]
modulate = Color( 0.223529, 0.239216, 0.298039, 1 )
margin_left = -1061.0
margin_top = 787.0
margin_right = 6001.0
margin_bottom = 1336.0

[node name="ColorRect" type="ColorRect" parent="FGStuff"]
margin_left = -2751.0
margin_top = -1429.0
margin_right = -513.0
margin_bottom = 2188.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="FGStuff"]
margin_left = 5192.78
margin_top = -1661.0
margin_right = 7090.78
margin_bottom = 2571.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vignette_fade2" type="Sprite" parent="."]
position = Vector2( 407.755, 1310.04 )
scale = Vector2( 0.303682, 1.92705 )
texture = ExtResource( 18 )

[node name="vignette_fade3" type="Sprite" parent="."]
position = Vector2( 5365.73, 1421.83 )
rotation = 3.14159
scale = Vector2( 0.536974, -2.29474 )
texture = ExtResource( 18 )

[node name="LeftSP" parent="." instance=ExtResource( 14 )]
position = Vector2( 521.93, 1317.58 )

[node name="RightSP" parent="." instance=ExtResource( 14 )]
position = Vector2( 5307.15, 1332.58 )

[node name="collisions" type="Node2D" parent="."]
position = Vector2( 2.37842, 256.245 )

[node name="StaticBody2D" type="StaticBody2D" parent="collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions/StaticBody2D"]
position = Vector2( -91.9669, 321.696 )
polygon = PoolVector2Array( -208.067, 1110.63, 6469.5, 1108.44, 4146.94, 1355.88, -479.801, 1380.32 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="collisions/StaticBody2D"]
position = Vector2( -258.735, -573.912 )
polygon = PoolVector2Array( 2159.68, 1168.63, 5964.4, 1412.05, 3372.03, 1357.92, 3113.03, 1332.7, 2875.9, 1371.38, 2148.69, 1369.02, -70.6005, 1353.55 )

[node name="PlayerDetectionZone" parent="collisions" instance=ExtResource( 19 )]
position = Vector2( 1446.34, 965.349 )

[node name="RightTZ" parent="." instance=ExtResource( 26 )]
position = Vector2( 2765.58, 1109.09 )

[node name="CollisionShape2D" parent="RightTZ" index="0"]
position = Vector2( 2763.89, 217.692 )
shape = SubResource( 1 )

[node name="LeftTZ" parent="." instance=ExtResource( 26 )]
position = Vector2( 771.99, 457.306 )

[node name="CollisionShape2D" parent="LeftTZ" index="0"]
position = Vector2( -525.196, 867.668 )
shape = SubResource( 2 )

[node name="HideSpot" type="Position2D" parent="."]
position = Vector2( 1915.94, -1093.16 )

[connection signal="transition_triggered" from="RightTZ" to="." method="_on_RightTZ_transition_triggered"]
[connection signal="transition_triggered" from="LeftTZ" to="." method="_on_LeftTZ_transition_triggered"]

[editable path="PuppyCamera"]
[editable path="RightTZ"]
[editable path="LeftTZ"]
